added a link to the hangman

--- a/portfolio.html
+++ b/portfolio.html
@@ -36,7 +36,7 @@
                 <div class="picture">
                     <img class="portfolio" src="assets/images/Hangman.jpeg" alt="Ipad" />
 
-                    <h4>Hangman</h4>
+                    <a href="https://orit1989.github.io/Hangman-Game/" target="_blank"><h4>Hangman</h4></a>
                 </div>
 
                 <div class="picture">
