linked my trivia game

--- a/portfolio.html
+++ b/portfolio.html
@@ -18,9 +18,9 @@
 
             <h1>Orit Freud</h1>
             <nav>
-                <a href="index.html">About</a>
-                <a href="portfolio.html">Portfolio</a>
-                <a href="contact.html" >Contact</a>
+                <a class="index" href="index.html">About</a>
+                <a class="index" href="portfolio.html">Portfolio</a>
+                <a class="index" href="contact.html" >Contact</a>
             </nav>
 
         </div>
@@ -42,7 +42,7 @@
                 <div class="picture">
                     <img class="portfolio" src="assets/images/Triva%20Game.jpeg" alt="Ear Phones" />
             
-                    <h4>Trivia Game</h4>
+                    <a href="https://orit1989.github.io/TriviaGame/" target="_blank"><h4>Trivia Game</h4></a>
                 </div>
 
 
