--- a/contact.html
+++ b/contact.html
@@ -16,9 +16,9 @@
 
             <h1>Orit Freud</h1>
             <nav>
-                <a href="index.html">About</a>
-                <a href="portfolio.html">Portfolio</a>
-                <a href="contact.html">Contact</a>
+                <a class="index" href="index.html">About</a>
+                <a class="index" href="portfolio.html">Portfolio</a>
+                <a class="index" href="contact.html">Contact</a>
             </nav>
 
         </div>
