linked the liri app

--- a/portfolio.html
+++ b/portfolio.html
@@ -49,7 +49,7 @@
                 <div class="picture">
                     <img class="portfolio" src="assets/images/Rock.jpg" alt="TV" />
             
-                    <h4>Rock Paper Scissors</h4>
+                    <a href="https://orit1989.github.io/GifTastic/" target="_blank"><h4>Giftastic</h4></a>
                 </div>    
 
 
@@ -57,7 +57,7 @@
                     <img class="portfolio"
                     src="assets/images/RPG%20Game.jpeg" alt="DJ Set" />
             
-                    <h4>RPG Game</h4>
+                    <a href="https://github.com/orit1989/liri-node-app" target="_blank"><h4>Liri App</h4></a>
                 </div>
 
 
