updated link to burger app in the porfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -79,8 +79,8 @@
 
                     <div class="picture">
                         <img class="portfolio" src="assets/images/burger.png" alt="burger" />
-                        <a href="https://serene-woodland-13056.herokuapp.com/" target="_blank">
-                            <h4>BurgerApp</h4>
+                        <a href="https://yummyburgerapp.herokuapp.com/" target="_blank">
+                            <h4>YummyBurgerApp</h4>
                         </a>
                     </div>
 
